--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-calendar": "^14.0.6",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -38,6 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-calendars": "^1.1311.1",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
