--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
-    "expo": "~52.0.46",
+    "expo": "^50.0.0",
     "expo-blur": "~14.0.3",
     "expo-calendar": "^14.0.6",
     "expo-constants": "~17.0.8",
@@ -36,6 +36,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "lodash": "^4.17.21",
+    "log-symbols": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
