--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@supabase/supabase-js": "^2.49.4",
-    "expo": "^50.0.0",
+    "expo": "^53.0.9",
     "expo-blur": "~14.0.3",
     "expo-calendar": "^14.0.6",
     "expo-constants": "~17.0.8",
@@ -48,12 +48,15 @@
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli-server-api": "^10.1.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
