--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,9 @@
       "distribution": "internal"
     },
     "production": {
+      "android": {
+        "buildType": "app-bundle"
+      },
       "autoIncrement": true
     }
   },
