--- a/app.json
+++ b/app.json
@@ -8,7 +8,6 @@
 
     "android": {
       "package": "com.grup10.cinema_challenges_app",
-      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
@@ -21,8 +20,7 @@
 
     "web": {
       "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "output": "static"
     },
 
     "plugins": [
