--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
 
     "android": {
       "package": "com.grup10.cinema_challenges_app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
@@ -20,7 +21,8 @@
 
     "web": {
       "bundler": "metro",
-      "output": "static"
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
     },
 
     "plugins": [
