--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.0.0",
+    "@expo/metro-config": "^0.20.14",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.2.10",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.49.8",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-calendar": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
@@ -37,9 +40,12 @@
     "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
     "log-symbols": "^7.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "metro": "^0.82.0",
+    "metro-config": "^0.82.0",
+    "metro-resolver": "^0.82.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.79.2",
     "react-native-calendars": "^1.1311.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -48,14 +54,14 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-image-picker": "~16.1.4"
+    "react-test-renderer": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@react-native-community/cli-server-api": "^10.1.1",
+    "@expo/cli": "^0.24.13",
+    "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   },
   "private": true
