una solcuio mes pro no de lo de cerca

--- a/package.json
+++ b/package.json
@@ -56,6 +56,13 @@
     "react-native-webview": "13.13.5",
     "react-test-renderer": "^19.0.0"
   },
+   "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/cli": "^0.24.13",
