--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.2.10",
-    "@supabase/supabase-js": "^2.49.8",
+    "@supabase/supabase-js": "^1.35.7",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-calendar": "~14.1.4",
@@ -52,11 +52,12 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.3.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-test-renderer": "^19.0.0"
   },
-   "expo": {
+  "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
