--- a/app.json
+++ b/app.json
@@ -1,29 +1,28 @@
 {
   "expo": {
     "name": "Cinema Challenges",
-    "slug": "cinema-challenges-app",
+    "slug": "filmquestproject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "android": {
       "package": "com.grup10.cinema_challenges_app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       "expo-image-picker",
@@ -37,18 +36,17 @@
         }
       ]
     ],
-
     "experiments": {
       "typedRoutes": true
     },
-
     "extra": {
       "router": {
         "origin": false
       },
       "eas": {
-        "projectId": "4821daf5-16db-474a-b668-cdd7f3ed4953"
+        "projectId": "39edaf6d-7d19-47bd-9e8b-f82043c2cda2"
       }
-    }
+    },
+    "owner": "prograg10"
   }
 }
